[package]
name = "hermes-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = { version = "0.3.31" }
libp2p = { version = "0.52.0", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
